external-crates/move/crates/move-compiler/tests/move_2024/expansion/use_function_overlap_with_module.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_2024/expansion/use_function_overlap_with_module.move:7:29
  │
7 │     use 0x2::X::{Self, u as X};
  │                  ----       ^ Duplicate module member or alias 'X'. Top level names in a namespace must be unique
  │                  │           
  │                  Alias previously defined here

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/expansion/use_function_overlap_with_module.move:10:9
   │
10 │         X::u()
   │         ^ Expected a module or address in this position, not a module member

